--- a/cards.html
+++ b/cards.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sliding Tabs</title>
+  <title>Cards</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
@@ -16,7 +16,6 @@
 <body>
   <section>
     <div class="cards">
-
       <article class="information card">
         <span class="tag">Feature</span>
         <h2 class="title">Never miss your important meetings</h2>
@@ -32,7 +31,6 @@
       </article>
       <article class="plan card">
         <div class="inner">
-
           <span class="pricing">
             <span>
               $56 <small>/ m</small>
